# fjfi-devops-demo

./: .gitignore  README.md  gulierus.py  pyproject.toml  requirements.txt
.github/workflow/: ci-tests.yaml
.github/workflows/: ci-tests.yaml
code/: quadratic.py
code/tests/: test_quadratic.py
samples/: evaluate.py  quadratic.py
samples/tests/: test_evaluate.py  test_quadratic.py
src/samples/: cache_result.py  caesar_cipher.py  quadratic.py  retry.py
src/samples/scripts/: main.py
src/samples/tests/: test_cache_result.py  test_caesar_cipher.py  test_evaluate.py  test_quadratic.py  test_retry.py
