[project]
name = "fjfi-devops-demo"
version = "0.1.0"
description = "Demonstration of the CI/CD routine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.*",
]

[dependency-groups]
dev = [
    "pytest==9.*",
    "ruff==0.15.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/samples"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

